--- a/ShnoozleTests/Info.plist
+++ b/ShnoozleTests/Info.plist
@@ -18,7 +18,20 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>FacebookAppID</key>
+	<string>459343887548782</string>
+	<key>FacebookDisplayName</key>
+	<string>snoozle</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb459343887548782</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
