--- a/podfile
+++ b/podfile
@@ -1,6 +1,7 @@
 pod 'Parse'
 pod 'ParseUI'
 pod 'Facebook-iOS-SDK'
+pod 'SCLAlertView-Objective-C'
 target :ShnoozleTests, :exclusive => true do
     pod 'Kiwi'
 end
