--- a/podfile
+++ b/podfile
@@ -2,6 +2,7 @@ pod 'Parse'
 pod 'ParseUI'
 pod 'Facebook-iOS-SDK'
 pod 'SCLAlertView-Objective-C'
+pod 'RESideMenu', '~> 4.0.7'
 target :ShnoozleTests, :exclusive => true do
     pod 'Kiwi'
 end
