--- a/podfile
+++ b/podfile
@@ -3,6 +3,8 @@ pod 'ParseUI'
 pod 'Facebook-iOS-SDK'
 pod 'SCLAlertView-Objective-C'
 pod 'RESideMenu', '~> 4.0.7'
+pod 'JTHamburgerButton', '~> 1.0'
+
 target :ShnoozleTests, :exclusive => true do
     pod 'Kiwi'
 end
