--- a/podfile
+++ b/podfile
@@ -4,7 +4,7 @@ pod 'Facebook-iOS-SDK'
 pod 'SCLAlertView-Objective-C'
 pod 'RESideMenu', '~> 4.0.7'
 pod 'JTHamburgerButton', '~> 1.0'
-
+pod 'MZTimerLabel'
 target :ShnoozleTests, :exclusive => true do
     pod 'Kiwi'
 end
