--- a/podfile
+++ b/podfile
@@ -5,6 +5,7 @@ pod 'SCLAlertView-Objective-C'
 pod 'RESideMenu', '~> 4.0.7'
 pod 'JTHamburgerButton', '~> 1.0'
 pod 'MZTimerLabel'
+pod 'EKVideoController'
 target :ShnoozleTests, :exclusive => true do
     pod 'Kiwi'
 end
